# mmtls

./: .gitignore  README.md
linux/: CMakeLists.txt
src/: client_finish.cpp  client_finish.h  client_hello.cpp  client_hello.h  const.h  custom_defs.h  handshakeHasher.cpp  handshakeHasher.h  logger.hpp  main.cpp  mmtls.cpp  mmtls.h  mmtls_openssl.h  mmtls_short.cpp  mmtls_short.h  record.cpp  record.h  server_finish.cpp  server_finish.h  server_hello.cpp  server_hello.h  session.cpp  session.h  session_ticket.cpp  session_ticket.h  signature.cpp  signature.h  utility.cpp  utility.h
windows/: mmtls.sln  mmtls.vcxproj  mmtls.vcxproj.filters
